# WealthBotPro

./: .env.example  .env.template  .gitignore  .replit  EASY_SETUP.md  README_DEPLOYMENT.md  TELEGRAM_SETUP.md  advanced_security_engine.py  api_test.py  blockchain_interface.py  bsc-sniper.service  config.json  config_production.json  copy_files.sh  deploy_config_tool.py  install_verify.py  profit_management.py  pyproject.toml  replit.md  requirements.txt  requirements_production.txt  start_bot_ubuntu.sh  telegram_notifier.py  ubuntu_deploy.sh  ubuntu_deploy_py312.sh  ubuntu_setup_commands.txt  ubuntu_setup_complete.sh
bot_files/: advanced_security_engine.py  blockchain_interface.py  bsc_sniper_bot_2.py  config.json  profit_management.py  setup_guide.md  telegram_notifier.py  validate_key.py
