[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bsc-sniper-bot-2.0"
version = "2.0.0"
description = "Advanced BSC Token Sniper Bot with 30+ Security Checks"
authors = [{name = "BSC Sniper", email = "sniper@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "web3>=6.15.1",
    "eth-account>=0.11.0",
    "requests>=2.31.0",
    "asyncio-throttle>=1.0.2",
    "colorama>=0.4.6",
    "python-telegram-bot>=20.7",
    "aiohttp>=3.9.1",
    "eth-utils>=2.3.1",
    "eth-typing>=3.5.2",
    "hexbytes>=0.3.1",
    "websockets>=12.0",
    "python-dotenv>=1.0.0"
]

[tool.setuptools]
packages = ["sniper_bot"]